# ML_Linear_Regression_Bike

./: Projekt-1_Roedle_Singh.ipynb  README.md  pyproject.toml  requirements.txt
