[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Alexander Rödle", "Gurwinder Singh"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
ucimlrepo = "^0.0.7"
seaborn = "^0.13.2"
jinja2 = "^3.1.4"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"